# RestAPI-trading

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  app-entrypoint.sh  app.Dockerfile  celery.Dockerfile  docker-compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
app/: main.py
app/api/: __init__.py  handlers.py
app/api/handlers/: products.py  users.py
app/auth/: actions.py  handlers.py  verify_token.py
app/database/: connect.py  db.py  managers.py
app/database/models/: __init__.py  base.py  product.py  user.py
app/exeptions/: __init__.py
app/exeptions/client/: exeptions.py  handlers.py  shemas.py
app/exeptions/http/: responses.py  shemas.py
app/schemas/: base.py  payload.py  product.py  responses.py  token.py  user.py
app/serializers/: user.py
app/servise/: cache.py  dependens.py  payload_links.py
app/settings/: config.py  constance.py  setups_app.py
app/utils/: helpers.py  log.py  validators.py
docker/: app.Dockerfile  celery.Dockerfile  test.Dockerfile
migrations/: env.py
migrations/versions/: 2c77d160c448_create_user_model.py  3fef76c864e8_update_base_model_and_add_product_model.py  545fe8f3bd43_.py  56867dc0db5a_.py  66e51fbfc796_.py  6a842838582b_.py  8001838bfebd_create_user_model.py  be7d54e21866_.py  bfd1a26f33e2_.py  d8bf3458eb7c_create_user_model.py  e8bf571e1cdd_.py  ef12f13f94b2_.py  f51035582a46_.py
scripts/: celery-entrypoint.sh  test-entrypoint.sh
tests/: conftest.py
tests/api/: test_endpoints.py  test_token.py
tests/db/: test_crud.py
tests/utils/: test_validators.py
(+8 files in other folders)
