[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["IlyaBulatau <ilyabulatau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.101.1"}
aiohttp = "^3.8.5"
alembic = "^1.11.3"
sqlalchemy = "^2.0.20"
asyncpg = "^0.28.0"
pydantic-settings = "^2.0.3"
passlib = "^1.7.4"
python-jose = "^3.3.0"
aioredis = "^2.0.1"
celery = "^5.3.4"
redis = "^5.0.0"


[tool.poetry.group.test.dependencies]
black = "^23.9.0"
pytest = "^7.4.2"
flake8 = "^6.1.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
